fix(dev):fix minnor issues

--- a/property-rental-main-app/src/app/page/contact-us/contact-us.component.html
+++ b/property-rental-main-app/src/app/page/contact-us/contact-us.component.html
@@ -1,6 +1,6 @@
-<main class="mt-20 bg-black text-white min-h-screen">
+<main class=" bg-black text-white min-h-screen">
     <div>
-      <img src="https://www.persistent.com/wp-content/uploads/2023/12/banner-image-for-digital-lending-solutions-blog-scaled.jpg"
+      <img src="https://www.persistent.com/wp-content/uploads/2023/12/banner-image-for-digital-lending-solutions-blog-scaled.jpg" alt=""
         class="h-[70vh] w-full object-cover">
     </div>
   
@@ -12,7 +12,7 @@
     <div class="mt-24 flex flex-col lg:flex-row justify-evenly space-y-6 lg:space-y-0">
       <div class="h-[25vh] w-[80vw] lg:w-[28vw] border-2 border-[#4c4c4c] flex gap-x-4 justify-center items-center">
         <div>
-          <img src="https://www.apartments.com/images/librariesprovider3/default-album/renters@2x-2.png?sfvrsn=2f6f0238_0"
+          <img src="https://www.apartments.com/images/librariesprovider3/default-album/renters@2x-2.png?sfvrsn=2f6f0238_0" alt=""
             class="h-[12vh] w-[8vw] object-contain">
         </div>
         <div class="text-xs space-y-3 text-center">
@@ -24,7 +24,7 @@
   
       <div class="h-[25vh] w-[80vw] lg:w-[28vw] border-2 border-[#4c4c4c] flex gap-x-4 justify-center items-center">
         <div>
-          <img src="https://www.apartments.com/images/librariesprovider3/default-album/user-all-rentals@2x.png?sfvrsn=4079d0a1_0"
+          <img src="https://www.apartments.com/images/librariesprovider3/default-album/user-all-rentals@2x.png?sfvrsn=4079d0a1_0" alt=""
             class="h-[12vh] w-[8vw] object-contain">
         </div>
         <div class="text-xs space-y-3 text-center">
@@ -37,37 +37,20 @@
   
     <hr class="mt-16 border-gray-700">
   
-    <div class="mt-10 text-center">
-      <p class="text-3xl font-semibold">Frequently asked questions</p>
-      <div class="mt-10 text-xs flex flex-col lg:flex-row justify-evenly space-y-6 lg:space-y-0">
-        <div>
-          <ul class="text-[#0576a7] list-disc space-y-6 hover:underline">
-            <li class="text-white list-none text-lg">Top FAQs for Renters</li>
-            <li><a href="#">Does Apartments.com screen listings?</a></li>
-            <li><a href="#">How do I apply to rentals?</a></li>
-            <li><a href="#">Will you help me find a new place to live?</a></li>
-            <li><a href="#">How do I avoid a scam?</a></li>
-            <li><a href="#">A property manager is not responding…</a></li>
-          </ul>
-        </div>
-        <div>
-          <ul class="text-[#0576a7] list-disc space-y-6 hover:underline">
-            <li class="text-white list-none text-lg">Top FAQs for Managers</li>
-            <li><a href="#">Does Apartments.com screen listings?</a></li>
-            <li><a href="#">How do I manage my properties?</a></li>
-            <li><a href="#">Can I list multiple properties?</a></li>
-            <li><a href="#">What tools are available for managers?</a></li>
-          </ul>
-        </div>
+
+    <section class="flex justify-center mt-10 bg-black">
+      <div class="px-5 w-full max-w-5xl">
+        <p class="text-3xl font-semibold">Frequently asked questions</p>
+        <app-faqs></app-faqs>
       </div>
-    </div>
-  
+    </section>
+
+
     <div class="bg-cover bg-no-repeat bg-center mt-20"
       style="background-image: url('https://www.apartments.com/images/librariesprovider3/logos/backgroundimg-callout_revised.jpg'); height: 20vh;">
-      <div class="space-y-3 pl-8 pt-5 ">
-        <p class="text-2xl text-[#4c4c4c] font-semibold">Own or manage a 5+ unit building?</p>
-        <p class="text-[#4c4c4c] text-xs">List apartments for rent on the most powerful and up-to-date network in the industry.</p>
-        <p class="text-[#0576a7] text-xs hover:underline"><a href="#">Learn about advertising solutions</a></p>
+      <div class="space-y-3 pl-8 pt-5 flex flex-col items-end px-20">
+        <p class="text-2xl text-black font-semibold">Own or manage a 5+ unit building?</p>
+        <p class="text-[#4c4c4c] text-xs font-medium">List apartments for rent on the most powerful and up-to-date network in the industry.</p>
       </div>
     </div>
   
