--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
@@ -1,3 +1,6 @@
+<!-- <div *ngIf="propertyCard.length == null">
+    <h1 class="text-white"> no data</h1>
+</div> -->
 
 <div class="card apartment-card border border-gray-300 rounded-lg overflow-hidden " style="width: 60vh; height: 30vh;" >
     
