--- a/property-rental-main-app/src/styles.css
+++ b/property-rental-main-app/src/styles.css
@@ -1,13 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Quattrocento+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap'); */
 body {
     background: #000;
     overflow-y: scroll;
     overflow-x: hidden;
 }
-h1{
+/* h1{
     font-family: "Bebas Neue", sans-serif;
     font-weight: 500;
     font-style: normal;
@@ -29,4 +29,4 @@ li{
     font-family: "Quattrocento Sans", sans-serif;
     font-weight: 200;
     font-style: normal;
-}
+} */
