--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -2,12 +2,12 @@
   <div class=" flex flex-col sm:w-1/2 md:w-1/3 lg:w-1/4 p-4 " style="height: 50vh; width: 40vh;">
     <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
       <div class="card-img-top h-48 w-full">
-        <img [src]="product.imageUrl" class="h-full w-full object-cover" alt="">
+        <img [src]="product.propertyCardImage" class="h-full w-full object-cover" alt="">
       </div>
       <div class="card-body p-4">
-        <h4 class="card-title text-xl font-semibold mb-2">{{product.name}}</h4>
-        <p class="card-text text-center text-gray-600">{{product.location}}</p>
-        <p class="text-center pt-2 text-sm font-normal text-gray-800">{{product.price}}</p>
+        <h4 class="card-title text-xl font-semibold mb-2">{{product.propertyName}}</h4>
+        <p class="card-text text-center text-gray-600">{{product.propertyLocation}}</p>
+        <p class="text-center pt-2 text-sm font-normal text-gray-800">{{product.propertyPrice}}</p>
       </div>
     </div>
   </div>
