--- a/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
+++ b/property-rental-main-app/src/app/components/property-cards/property-cards.component.html
@@ -3,15 +3,15 @@
     
     <div  class="title h-12 bg-gray-100 flex items-center px-4">
         <div>
-            <h2 class="m-0 text-lg text-gray-800">{{ propertyCard.name}}</h2>
-            <p class="m-0 text-sm text-gray-500">{{propertyCard.location }}</p>
+            <h2 class="m-0 text-lg text-gray-800">{{ propertyCard.propertyName}}</h2>
+            <p class="m-0 text-sm text-gray-500">{{propertyCard.propertyLocation }}</p>
         </div>
     </div>
     <div class="side flex h-full">
         <div class="imgs w-1/2  overflow-hidden">
-            <div *ngIf="propertyCard.carouselImages.length"  [id]="'carousel' + index" class="carousel slide h-full" data-bs-ride="carousel">
+            <div *ngIf="propertyCard.propertyImages.length"  [id]="'carousel' + index" class="carousel slide h-full" data-bs-ride="carousel">
                 <div class="carousel-inner h-full">
-                    <div *ngFor="let image of propertyCard.carouselImages;let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}" class="h-full">
+                    <div *ngFor="let image of propertyCard.propertyImages;let i = index" [ngClass]="{'carousel-item': true, 'active': i === 0}" class="h-full">
                         <img [src]="image" class="d-block w-full h-full object-cover" alt="...">
                     </div>
                 </div>
@@ -29,11 +29,11 @@
 
         <div  class="details w-1/2 p-2 flex flex-col justify-center"  routerLink="/propertydetails/{{propertyCard.id}}">
             <div class="card-body">
-                <p class="text-lg font-extrabold text-gray-800 ">{{ propertyCard.price}} </p>
-                <p class="text-sm font-bold text-gray-500 pb-1">{{ propertyCard.area }}</p>
-                <p class="text-sm font-extralight text-gray-500 pb-4">{{propertyCard.amenities}}</p>
+                <p class="text-lg font-extrabold text-gray-800 ">{{ propertyCard.propertyPrice}} </p>
+                <p class="text-sm font-bold text-gray-500 pb-1">{{ propertyCard.propertyArea }}</p>
+                <p class="text-sm font-extralight text-gray-500 pb-4">{{propertyCard.propertyAmenities}}</p>
                 <button class="bg-green-500 text-white py-2 px-4 rounded-lg hover:bg-gray-600 w-full transition duration-300 ease-in-out" data-bs-toggle="modal" data-bs-target="#requestTour">
-                    {{ propertyCard.button.text }}
+                    {{ propertyCard.propertyMessageButton.text }}
                 </button>
             </div>
         </div>
