--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -541,45 +541,7 @@
 </main> -->
 
 <div class="w-full h-[70vh] overflow-hidden">
-  <div
-    *ngIf="product.propertyImages.length"
-    id="carousel"
-    class="carousel slide h-full"
-    data-bs-ride="carousel"
-  >
-    <div class="carousel-inner h-full">
-      <div
-        *ngFor="let image of product.propertyImages"
-        class="carousel-item active h-full"
-      >
-        <img [src]="image" class="block w-full h-full object-cover" alt="..." />
-      </div>
-    </div>
-    <a
-      href="#carousel"
-      class="carousel-control-prev absolute top-0 bottom-0 left-0 flex items-center justify-center p-0 text-center text-gray-700 hover:text-gray-900"
-      role="button"
-      data-bs-slide="prev"
-    >
-      <span
-        class="carousel-control-prev-icon inline-block bg-no-repeat"
-        aria-hidden="true"
-      ></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a
-      href="#carousel"
-      class="carousel-control-next absolute top-0 bottom-0 right-0 flex items-center justify-center p-0 text-center text-gray-700 hover:text-gray-900"
-      role="button"
-      data-bs-slide="next"
-    >
-      <span
-        class="carousel-control-next-icon inline-block bg-no-repeat"
-        aria-hidden="true"
-      ></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
+  <app-image-carousel [data]="product"></app-image-carousel>
 </div>
 <!-- 
 property data -->
@@ -999,70 +961,160 @@ property data -->
       </div>
     </div>
 
-
     <!--  about property -->
-    <div class="about-property pt-5 ">
-      <div >
-        <h2 class="text-white text-3xl font-semibold">About Presidential Towers</h2>
-      <p class="pt-3 text-gray-300">What do you want to do tonight? The simple question holds such anticipation, especially here at Presidential Towers, where you can get just about anywhere on foot. With a Fitness Formula Club, a relaxing sundeck, and several restaurants in the building, the options are endless. So go ahead, live life on your terms. Schedule a tour of our apartments in Chicago near the West Loop today!</p><br>
-      <p class="text-gray-300">Presidential Towers is an apartment community managed by Waterton, located in Cook County and the 60661 ZIP Code. This area is served by the Chicago Public Schools attendance zone.</p>
+    <div class="about-property pt-5">
+      <div>
+        <h2 class="text-white text-3xl font-semibold">
+          About Presidential Towers
+        </h2>
+        <p class="pt-3 text-gray-300">
+          What do you want to do tonight? The simple question holds such
+          anticipation, especially here at Presidential Towers, where you can
+          get just about anywhere on foot. With a Fitness Formula Club, a
+          relaxing sundeck, and several restaurants in the building, the options
+          are endless. So go ahead, live life on your terms. Schedule a tour of
+          our apartments in Chicago near the West Loop today!
+        </p>
+        <br />
+        <p class="text-gray-300">
+          Presidential Towers is an apartment community managed by Waterton,
+          located in Cook County and the 60661 ZIP Code. This area is served by
+          the Chicago Public Schools attendance zone.
+        </p>
       </div>
-      <div class="features-container text-white  ">
+      <div class="features-container text-white">
         <h1 class="text-2xl pt-3 font-semibold">Unique Features</h1>
         <div class="features-wrapper pt-3">
-            <ul class="features-list">
-                <li>Columbia College is 1.5 miles away.</li>
-                <li>Online Rent Payments</li>
-                <li>UIC is a mile away.</li>
-                <li>Union Station 0.3 miles away</li>
-                <li>Wood Inspired Flooring*</li>
-                <li>Bicycle and Additional Personal Storage</li>
-                <li>Free WiFi in The M Lounge</li>
-                <li>Newly Remodeled Residences*</li>
-                <li>Oak Cabinetry Options Available</li>
-                <li>Washer/Dryers*</li>
-                <li>4 Grocery Stores Within a 5 Minute Walk</li>
-                <li>Breakfast Bars*</li>
-            </ul>
-            
-            <ul class="features-list">
-                <li>Concentra Urgent care located in the building</li>
-                <li>DePaul University is 1.3 miles away.</li>
-                <li>Digital Cable and HDTV Packages Available</li>
-                <li>Millennium Park is 1 mile away</li>
-                <li>Upgraded Appliances*</li>
-                <li>Cultured Marble Vanities</li>
-                <li>French Market 0.2 miles away</li>
-                <li>Guest Suites</li>
-                <li>Sales Force Tower is a mile away.</li>
-                <li>Ultra-Fast Fiber Internet Up to 1,000 Mbps</li>
-                <li>Chicago Kent Law School is 0.2 miles away.</li>
-                <li>Decorator Light</li>
-            </ul>
-            
-            <ul class="features-list">
-                <li>Deloitte is 0.7 miles away.</li>
-                <li>Generous Closet Space</li>
-                <li>Google Office is 0.9 miles away.</li>
-                <li>Granite Countertops*</li>
-                <li>Large Pets Accepted (breed restrictions)</li>
-                <li>Ogilvie Station across the street</li>
-                <li>Stunning City Views*</li>
-                <li>Trash Chutes on Every Floor</li>
-                <li>Espresso Cabinetry Option Available</li>
-                <li>Luxer One Package Room</li>
-                <li>On-site Dining Options</li>
-                <li>Renovated Kitchens</li>
-            </ul>
-        </div>
-    </div>
-    <div >
+          <ul class="features-list">
+            <li>Columbia College is 1.5 miles away.</li>
+            <li>Online Rent Payments</li>
+            <li>UIC is a mile away.</li>
+            <li>Union Station 0.3 miles away</li>
+            <li>Wood Inspired Flooring*</li>
+            <li>Bicycle and Additional Personal Storage</li>
+            <li>Free WiFi in The M Lounge</li>
+            <li>Newly Remodeled Residences*</li>
+            <li>Oak Cabinetry Options Available</li>
+            <li>Washer/Dryers*</li>
+            <li>4 Grocery Stores Within a 5 Minute Walk</li>
+            <li>Breakfast Bars*</li>
+          </ul>
 
-      <!-- Neighborhood -->
-      <h2 class="text-white text-3xl font-semibold">Neighborhood</h2>
-    <p class="pt-3 text-gray-300">Chicago’s reputation as one of America’s most distinctive cities owes a lot to the electric atmosphere and vibrant culture that defines Downtown Chicago. Iconic sites like Grant Park, Soldier Field, the Chicago Theatre, Navy Pier, and the Chicago Riverwalk are the most famous landmarks in Downtown, but that barely scratches the surface of what the neighborhood has to offer: dozens of theaters, live music venues, museums, and galleries fill the area, along with hundreds of shops and restaurants catering to every conceivable taste, plus the campuses of Columbia College Chicago, DePaul University, and the Art Institute of Chicago.</p><br>
-    <p class="text-gray-300">The Loop, Greektown, River North, and the Magnificent Mile are all nearby, easily reached by a short ride on the train. There’s no shortage of swanky apartments and condos in Downtown Chicago, but you can often find great deals on studios as well, allowing you to live in the heart of the action even if you’re on a budget</p>
-    </div>
+          <ul class="features-list">
+            <li>Concentra Urgent care located in the building</li>
+            <li>DePaul University is 1.3 miles away.</li>
+            <li>Digital Cable and HDTV Packages Available</li>
+            <li>Millennium Park is 1 mile away</li>
+            <li>Upgraded Appliances*</li>
+            <li>Cultured Marble Vanities</li>
+            <li>French Market 0.2 miles away</li>
+            <li>Guest Suites</li>
+            <li>Sales Force Tower is a mile away.</li>
+            <li>Ultra-Fast Fiber Internet Up to 1,000 Mbps</li>
+            <li>Chicago Kent Law School is 0.2 miles away.</li>
+            <li>Decorator Light</li>
+          </ul>
+
+          <ul class="features-list">
+            <li>Deloitte is 0.7 miles away.</li>
+            <li>Generous Closet Space</li>
+            <li>Google Office is 0.9 miles away.</li>
+            <li>Granite Countertops*</li>
+            <li>Large Pets Accepted (breed restrictions)</li>
+            <li>Ogilvie Station across the street</li>
+            <li>Stunning City Views*</li>
+            <li>Trash Chutes on Every Floor</li>
+            <li>Espresso Cabinetry Option Available</li>
+            <li>Luxer One Package Room</li>
+            <li>On-site Dining Options</li>
+            <li>Renovated Kitchens</li>
+          </ul>
+        </div>
+      </div>
+      <div>
+        <!-- Neighborhood -->
+        <h2 class="text-white text-3xl font-semibold">Neighborhood</h2>
+        <p class="pt-3 text-gray-300">
+          Chicago’s reputation as one of America’s most distinctive cities owes
+          a lot to the electric atmosphere and vibrant culture that defines
+          Downtown Chicago. Iconic sites like Grant Park, Soldier Field, the
+          Chicago Theatre, Navy Pier, and the Chicago Riverwalk are the most
+          famous landmarks in Downtown, but that barely scratches the surface of
+          what the neighborhood has to offer: dozens of theaters, live music
+          venues, museums, and galleries fill the area, along with hundreds of
+          shops and restaurants catering to every conceivable taste, plus the
+          campuses of Columbia College Chicago, DePaul University, and the Art
+          Institute of Chicago.
+        </p>
+        <br />
+        <p class="text-gray-300">
+          The Loop, Greektown, River North, and the Magnificent Mile are all
+          nearby, easily reached by a short ride on the train. There’s no
+          shortage of swanky apartments and condos in Downtown Chicago, but you
+          can often find great deals on studios as well, allowing you to live in
+          the heart of the action even if you’re on a budget
+        </p>
+      </div>
+      <div class="features-container text-white">
+        <h1 class="text-3xl pt-5 font-semibold">Community Amenities</h1>
+        <div class="features-wrapper pt-3">
+          <ul class="features-list">
+            <li>Laundry Facilities</li>
+            <li>Property Manager on Site</li>
+            <li>Doorman</li>
+            <li>Concierge</li>
+            <li>24 Hour Access</li>
+            <li>On-Site Retail</li>
+          </ul>
+
+          <ul class="features-list">
+            <li>Health Club Discount</li>
+            <li>Public Transportation</li>
+            <li>Elevator</li>
+            <li>Lounge</li>
+            <li>Disposal Chutes</li>
+            <li>Fitness Center</li>
+          </ul>
+
+          <ul class="features-list">
+            <li>Pool</li>
+            <li>Sundeck</li>
+            <li>Courtyard</li>
+            <li>Grill</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="features-container text-white">
+        <h1 class="text-3xl pt-5 font-semibold">Apartment Features</h1>
+        <div class="features-wrapper pt-3">
+          <ul class="features-list">
+            <li>High Speed Internet Access</li>
+            <li>Wi-Fi</li>
+            <li>Washer/Dryer</li>
+            <li>Air Conditioning</li>
+            <li>Heating</li>
+            <li>Window Coverings</li>
+          </ul>
+
+          <ul class="features-list">
+            <li>Kitchen</li>
+            <li>Refrigerator</li>
+            <li>Freezer</li>
+            <li>Office</li>
+            <li>Skylights</li>
+            <li>Walk-In Closets</li>
+
+          </ul>
+
+          <ul class="features-list">
+            <li>Views</li>
+            <li>Cable Ready</li>
+            <li>Dishwasher</li>
+            <li>Granite Countertops</li>
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
   <!-- form -->
@@ -1099,5 +1151,5 @@ property data -->
   </aside>
 
   <app-send-message></app-send-message>
-  <app-request-tourform></app-request-tourform> 
+  <app-request-tourform></app-request-tourform>
 </section>
