--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -3,6 +3,7 @@
 </div>
 <!-- 
 property data -->
+
 <section class="w-full flex justify-center text-gray-900 pt-5 gap-16">
   <div class="property-data w-[55vw] p-6 rounded-lg shadow-lg text-gray-800">
     <div class="text-white">
@@ -21,13 +22,14 @@ property data -->
           </div>
           <div class="mt-1 text-gray-800">STUDIO, 1BHK, 546 sq ft</div>
           <div class="flex gap-4 mt-6">
-            <button class="border-2 border-green-700 text-green-700 rounded-lg px-4 py-2 hover:border-4" (click)="FloorPlanTour()">
+            <button class="border-2 border-green-700 text-green-700 rounded-lg px-4 py-2 hover:border-4"
+              (click)="FloorPlanTour()">
               Tour This Floor Plan
             </button>
             <button class="text-blue-600 hover:underline" routerLink="/PropertyMediaView">
               <i class="fa-solid fa-building"></i> Floor Plan
             </button>
-            <button class="text-blue-600 hover:underline"  routerLink="/PropertyMediaView">
+            <button class="text-blue-600 hover:underline" routerLink="/PropertyMediaView">
               <i class="fa-duotone fa-cube"></i> Virtual Tour
             </button>
           </div>
@@ -201,69 +203,13 @@ property data -->
     <div class="about-property pt-5">
       <app-property-data-additional-info [additionalInfo]="AboutPresidentialTowers"></app-property-data-additional-info>
 
-      <!-- <app-property-data-facilities [propertyDetalisList]="properties"></app-property-data-facilities> -->
+      <app-property-data-facilities [propertyDetalisList]="UniqueFeaturesOfProperty"></app-property-data-facilities>
 
-      <app-property-data-additional-info  [additionalInfo]="NeighborhoodData"></app-property-data-additional-info>
+      <app-property-data-additional-info [additionalInfo]="NeighborhoodData"></app-property-data-additional-info>
 
-      <div class="features-container text-white">
-        <h1 class="text-3xl pt-5 font-semibold">Community Amenities</h1>
-        <div class="features-wrapper pt-3">
-          <ul class="features-list">
-            <li>Laundry Facilities</li>
-            <li>Property Manager on Site</li>
-            <li>Doorman</li>
-            <li>Concierge</li>
-            <li>24 Hour Access</li>
-            <li>On-Site Retail</li>
-          </ul>
+      <app-property-data-facilities [propertyDetalisList]="PropertyAmenities"></app-property-data-facilities>
 
-          <ul class="features-list">
-            <li>Health Club Discount</li>
-            <li>Public Transportation</li>
-            <li>Elevator</li>
-            <li>Lounge</li>
-            <li>Disposal Chutes</li>
-            <li>Fitness Center</li>
-          </ul>
-
-          <ul class="features-list">
-            <li>Pool</li>
-            <li>Sundeck</li>
-            <li>Courtyard</li>
-            <li>Grill</li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="features-container text-white">
-        <h1 class="text-3xl pt-5 font-semibold">Apartment Features</h1>
-        <div class="features-wrapper pt-3">
-          <ul class="features-list">
-            <li>High Speed Internet Access</li>
-            <li>Wi-Fi</li>
-            <li>Washer/Dryer</li>
-            <li>Air Conditioning</li>
-            <li>Heating</li>
-            <li>Window Coverings</li>
-          </ul>
-
-          <ul class="features-list">
-            <li>Kitchen</li>
-            <li>Refrigerator</li>
-            <li>Freezer</li>
-            <li>Office</li>
-            <li>Skylights</li>
-            <li>Walk-In Closets</li>
-          </ul>
-
-          <ul class="features-list">
-            <li>Views</li>
-            <li>Cable Ready</li>
-            <li>Dishwasher</li>
-            <li>Granite Countertops</li>
-          </ul>
-        </div>
-      </div>
+      <app-property-data-facilities [propertyDetalisList]="propertyFeatures"></app-property-data-facilities>
 
       <div class="features-container text-white">
         <h1 class="text-3xl pt-5 font-semibold pb-3">Details</h1>
