fix(dev):add school dynamic components

--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -211,6 +211,9 @@ property data -->
 
       <app-property-data-facilities [propertyDetalisList]="propertyFeatures"></app-property-data-facilities>
 
+      <app-property-school-card [schoolData]="propertySchoolData"></app-property-school-card>
+   
+
       <div class="features-container text-white">
         <h1 class="text-3xl pt-5 font-semibold pb-3">Details</h1>
         <span>Property Information</span>
@@ -224,6 +227,7 @@ property data -->
       </div>
     </div>
   </div>
+
   <!-- form -->
   <aside class="form w-80 bg-gray-200 shadow-lg rounded-lg p-6 fixed bottom-5 right-12">
     <div id="contactLead" class="h-full flex flex-col justify-between">
