--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -22,16 +22,10 @@ property data -->
           </div>
           <div class="mt-1 text-gray-800">STUDIO, 1BHK, 546 sq ft</div>
           <div class="flex gap-4 mt-6">
-            <button class="border-2 border-green-700 text-green-700 rounded-lg px-4 py-2 hover:border-4"
-              (click)="FloorPlanTour()">
+            <button routerLink="/PropertyMediaView" class="border-2 border-green-700 text-green-700 rounded-lg px-4 py-2 hover:border-4">
               Tour This Floor Plan
             </button>
-            <button class="text-blue-600 hover:underline" routerLink="/PropertyMediaView">
-              <i class="fa-solid fa-building"></i> Floor Plan
-            </button>
-            <button class="text-blue-600 hover:underline" routerLink="/PropertyMediaView">
-              <i class="fa-duotone fa-cube"></i> Virtual Tour
-            </button>
+
           </div>
         </div>
         <div>
@@ -71,7 +65,7 @@ property data -->
         </div>
 
         <div class="mt-6">
-          <p class="text-xl font-semibold mb-4">4 Units Available</p>
+          <p class="text-xl font-semibold mb-4">Units Available</p>
           <div class="border-b border-gray-400 mb-4"></div>
           
           <details class="p-4 rounded-lg">
@@ -134,7 +128,7 @@ property data -->
       <app-property-school-card [schoolData]="propertySchoolData"></app-property-school-card>
    
 
-      <div class="features-container text-white">
+      <!-- <div class="features-container text-white">
         <h1 class="text-3xl pt-5 font-semibold pb-3">Details</h1>
         <span>Property Information</span>
         <hr />
@@ -144,7 +138,9 @@ property data -->
             <li>2346 units/50 stories</li>
           </ul>
         </div>
-      </div>
+      </div> -->
+
+      
     </div>
   </div>
 
