--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -22,10 +22,10 @@ property data -->
           </div>
           <div class="mt-1 text-gray-800">STUDIO, 1BHK, 546 sq ft</div>
           <div class="flex gap-4 mt-6">
-            <button routerLink="/PropertyMediaView" class="border-2 border-green-700 text-green-700 rounded-lg px-4 py-2 hover:border-4">
+            <button routerLink="/PropertyMediaView"
+              class="border-2 border-green-700 text-green-700 rounded-lg px-4 py-2 hover:border-4">
               Tour This Floor Plan
             </button>
-
           </div>
         </div>
         <div>
@@ -47,7 +47,6 @@ property data -->
           </svg>
         </button>
 
-        
         <div class="hidden group-hover:block mt-4 bg-gray-50 p-4 border rounded-lg">
           <p class="text-sm font-bold text-gray-900">Highlights:</p>
           <div class="flex gap-16 mt-4 text-gray-700">
@@ -67,7 +66,7 @@ property data -->
         <div class="mt-6">
           <p class="text-xl font-semibold mb-4">Units Available</p>
           <div class="border-b border-gray-400 mb-4"></div>
-          
+
           <details class="p-4 rounded-lg">
             <summary class="flex justify-between">
               <span class="text-blue-600">Unit</span>
@@ -76,7 +75,6 @@ property data -->
               <span class="text-gray-600">Availability</span>
             </summary>
           </details>
-
 
           <div class="space-y-4">
             <details class="border border-gray-300 p-4 rounded-lg">
@@ -108,39 +106,23 @@ property data -->
               </button>
             </details>
           </div>
-          
         </div>
       </div>
     </div>
 
     <!--  about property -->
     <div class="about-property pt-5">
-      <app-property-data-additional-info [additionalInfo]="AboutPresidentialTowers"></app-property-data-additional-info>
+      <app-property-data-additional-info [additionalInfo]="AboutPropertyTowers"></app-property-data-additional-info>
 
-      <app-property-data-facilities [propertyDetalisList]="UniqueFeaturesOfProperty"></app-property-data-facilities>
+      <app-property-data-facilities [propertyDetalisList]="UniqueFeaturesOfPropertys"></app-property-data-facilities>
 
-      <app-property-data-additional-info [additionalInfo]="NeighborhoodData"></app-property-data-additional-info>
+      <app-property-data-additional-info [additionalInfo]="NeighborhoodDatas"></app-property-data-additional-info>
 
       <app-property-data-facilities [propertyDetalisList]="PropertyAmenities"></app-property-data-facilities>
 
-      <app-property-data-facilities [propertyDetalisList]="propertyFeatures"></app-property-data-facilities>
+      <app-property-data-facilities [propertyDetalisList]="ApartmentFeatures"></app-property-data-facilities>
 
-      <app-property-school-card [schoolData]="propertySchoolData"></app-property-school-card>
-   
-
-      <!-- <div class="features-container text-white">
-        <h1 class="text-3xl pt-5 font-semibold pb-3">Details</h1>
-        <span>Property Information</span>
-        <hr />
-        <div class="features-wrapper pt-3">
-          <ul class="features-list">
-            <li>Built in 1986</li>
-            <li>2346 units/50 stories</li>
-          </ul>
-        </div>
-      </div> -->
-
-      
+      <app-property-school-card [schoolData]="propertySchoolDatas"></app-property-school-card>
     </div>
   </div>
 
@@ -163,7 +145,7 @@ property data -->
         </button>
         <a href="tel:7087251991"
           class="flex justify-center items-center text-blue-700 hover:text-blue-800 transition duration-300">
-          <i class="fa fa-phone mr-2"></i> {{ product.phone }}
+          <!-- <i class="fa fa-phone mr-2"></i> {{ product.phone }} -->
         </a>
       </div>
     </div>
