--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="container mx-auto " (click)="redirectToDetails()">
+<div class="container mx-auto ">
   <div class=" flex flex-col sm:w-1/2 md:w-1/3 lg:w-1/4 p-4 " style="height: 50vh; width: 40vh;">
     <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
       <div class="card-img-top h-48 w-full">
