--- a/property-rental-main-app/src/app/page/home/home.component.html
+++ b/property-rental-main-app/src/app/page/home/home.component.html
@@ -14,7 +14,7 @@
   <div class="pb-10 bg-black">
     <h1 class="text-center text-3xl font-semibold mb-8">Explore Rentals in Chicago, IL</h1>
     <div class="cards-container flex flex-wrap justify-center gap-6">
-      <app-card *ngFor="let card of products" [product]="card" class="p-4"></app-card>
+      <app-card *ngFor="let card of products.slice(0,3)" [product]="card" class="p-4"></app-card>
     </div>
   </div>
 
