--- a/property-rental-main-app/src/app/page/property-data/property-data.component.html
+++ b/property-rental-main-app/src/app/page/property-data/property-data.component.html
@@ -1,22 +1,23 @@
 <div class="w-full h-[70vh] overflow-hidden">
   <app-image-carousel [data]="product"></app-image-carousel>
 </div>
-<!-- 
-property data -->
+<!-- property data -->
 
 <section class="w-full flex justify-center text-gray-900 pt-5 gap-16">
   <div class="property-data w-[55vw] p-6 rounded-lg shadow-lg text-gray-800">
-    <div class="text-white">
-      <div class="property-location text-sm mb-2">
-        Illinois / Cook County / Chicago / Presidential Towers
-      </div>
-      <h1 class="text-2xl font-semibold">Presidential Towers</h1>
-      <p class="mt-1 text-lg">555 W Madison St, Chicago, IL 60661</p>
-    </div>
-    <div class="mt-6 border-2 bg-white border-gray-200 p-4 rounded-lg">
+
+
+    <app-appartment-data></app-appartment-data>
+
+    <!-- <div class="mt-6 border-2 bg-white border-gray-200 p-4 rounded-lg" >
       <div class="flex justify-between">
         <div>
-          <div class="text-lg font-semibold text-gray-600">STUDIO ONE</div>
+     
+          <div class="property-location text-sm mb-2">
+            Illinois / Cook County / Chicago / Presidential Towers
+          </div>
+          <h1 class="text-2xl font-semibold">Presidential Towers</h1>
+          <p class="mt-1 text-lg">555 W Madison St, Chicago, IL 60661</p>
           <div class="mt-2 text-xl font-bold text-gray-600">
             ₹10,000 - ₹50,000
           </div>
@@ -108,7 +109,7 @@ property data -->
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!--  about property -->
     <div class="about-property pt-5">
@@ -143,10 +144,9 @@ property data -->
           data-bs-toggle="modal" data-bs-target="#sendMessage">
           Send Message
         </button>
-        <a href="tel:7087251991"
-          class="flex justify-center items-center text-blue-700 hover:text-blue-800 transition duration-300">
-          <!-- <i class="fa fa-phone mr-2"></i> {{ product.phone }} -->
-        </a>
+        <!-- <a href=""class="flex justify-center items-center text-blue-700 hover:text-blue-800 transition duration-300">
+          <i class="fa fa-phone mr-2"></i> {{ product.phone }}
+        </a> -->
       </div>
     </div>
   </aside>
