--- a/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
+++ b/property-rental-main-app/src/app/components/appartment-data/appartment-data.component.html
@@ -1,7 +1,6 @@
 <div class="mt-6 border-2 bg-white border-gray-200 p-4 rounded-lg" >
     <div class="flex justify-between">
       <div>
-        <!-- <div class="text-lg font-semibold text-gray-600">STUDIO ONE</div> -->
         <div class="property-location text-sm mb-2">
           {{appartmentData.locationhierarchy}}
         </div>
@@ -20,9 +19,7 @@
       </div>
       <div>
         <a href="#">
-          <div class="h-32 w-40 bg-cover bg-no-repeat rounded-lg" style="
-              background-image: url('https://images1.apartments.com/i2/9ppzFGH6ehYcZNHtEuCwD823kuEYtD82M8DzwiOvDn0/105/image.png?p=1');
-            "></div>
+          <div class="h-32 w-40 bg-cover bg-no-repeat rounded-lg" style="background-image: url({{appartmentData.propertyOverViewImage}});"></div>
         </a>
       </div>
     </div>
@@ -38,62 +35,49 @@
       </button>
 
       <div class="hidden group-hover:block mt-4 bg-gray-50 p-4 border rounded-lg">
-        <p class="text-sm font-bold text-gray-900">{{appartmentData.}}</p>
-        <div class="flex gap-16 mt-4 text-gray-700">
-          <ul class="list-disc pl-6 space-y-2 text-sm">
-            <li>Air conditioning</li>
-            <li>Washer/Dryer</li>
-            <li>Cable ready</li>
+        <p class="text-sm font-bold text-gray-900">{{floordetails.heading}}</p>
+        <div class="d-flex gap-4 mt-4 text-secondary">
+          <ul class="list-unstyled ps-3 mb-0" *ngFor="let item of floordetails.features.slice(0,3)">
+            <li>{{item.value}}</li>
           </ul>
-          <ul class="list-disc pl-6 space-y-2 text-sm">
-            <li>Walk-in closets</li>
-            <li>Window coverings</li>
-            <li>Skylight</li>
+          <ul class="list-unstyled ps-3 mb-0" *ngFor="let item of floordetails.features.slice(3)">
+            <li>{{item.value}}</li>
           </ul>
         </div>
       </div>
 
+
+
+      
       <div class="mt-6">
         <p class="text-xl font-semibold mb-4">Units Available</p>
         <div class="border-b border-gray-400 mb-4"></div>
 
         <details class="p-4 rounded-lg">
           <summary class="flex justify-between">
-            <span class="text-blue-600">Unit</span>
-            <span class="text-gray-800">price</span>
-            <span class="text-gray-800">square fit</span>
-            <span class="text-gray-600">Availability</span>
+            <span  *ngFor="let item of unitData.propertyunitscol" class="text-gray-800">{{item.value}}</span>
           </summary>
         </details>
 
         <div class="space-y-4">
-          <details class="border border-gray-300 p-4 rounded-lg">
+          <details class="border border-gray-300 p-4 rounded-lg" *ngFor="let item of unitData.unitsdata">
             <summary class="flex justify-between cursor-pointer">
-              <span class="text-blue-600">Unit 01</span>
-              <span class="text-gray-800">₹25,000</span>
-              <span class="text-gray-800">505 sq ft</span>
-              <span class="text-gray-600">Available: 15 June</span>
+              <span class="text-blue-600">{{item.unit}}</span>
+              <span class="text-gray-800">{{item.price}}</span>
+              <span class="text-gray-800">{{item.squarefit}}</span>
+              <span class="text-gray-800">{{item.Availability}}</span>
+             
             </summary>
-            <div class="mt-4 text-sm text-gray-700">
+            <div class="mt-4 text-sm text-gray-700" >
               <p class="font-semibold">Highlights:</p>
-              <ul class="grid grid-cols-2 gap-4 mt-2">
-                <li>High Speed Internet Access</li>
-                <li>Wifi</li>
-                <li>Washer/Dryer</li>
-                <li>Air Conditioning</li>
+              <ul class="grid grid-cols-2 gap-4 mt-2" >
+                <li  *ngFor="let data of item.features">{{data.value}}</li>
               </ul>
               <p class="mt-4 font-semibold">Kitchen Features:</p>
               <ul class="grid grid-cols-2 gap-4 mt-2">
-                <li>Dishwasher</li>
-                <li>Granite Countertops</li>
-                <li>Refrigerator</li>
-                <li>Freezer</li>
+                <li  *ngFor="let data of item.KitchenFeatures">{{data.value}}</li>
               </ul>
             </div>
-            <button class="mt-4 border-2 border-green-700 text-green-700 px-4 py-2 rounded-lg hover:border-4"
-              data-bs-toggle="modal" data-bs-target="#sendMessage">
-              Send Message
-            </button>
           </details>
         </div>
       </div>
