--- a/property-rental-main-app/src/app/components/card/card.component.html
+++ b/property-rental-main-app/src/app/components/card/card.component.html
@@ -1,13 +1,13 @@
-<div class="container mx-auto ">
-  <div class=" flex flex-col sm:w-1/2 md:w-1/3 lg:w-1/4 p-4 " style="height: 50vh; width: 40vh;">
-    <div class="card bg-white shadow-lg rounded-lg overflow-hidden">
-      <div class="card-img-top h-48 w-full">
-        <img [src]="product.propertyCardImage" class="h-full w-full object-cover" alt="">
+<div class="container">
+  <div class="d-flex flex-column p-4 mx-auto" style="height: 40vh; width: 40vh; max-width: 300px;">
+    <div class="card shadow-lg rounded overflow-hidden h-100">
+      <div class="card-img-top" style="height: 12rem; overflow: hidden;">
+        <img [src]="product.propertyCardImage" class="w-100 h-100 object-fit-cover" alt="">
       </div>
-      <div class="card-body p-4">
-        <h4 class="card-title text-xl font-semibold mb-2">{{product.propertyName}}</h4>
-        <p class="card-text text-center text-gray-600">{{product.propertyLocation}}</p>
-        <p class="text-center pt-2 text-sm font-normal text-gray-800">{{product.propertyPrice}}</p>
+      <div class="card-body p-3">
+        <h4 class="card-title h5 fw-bold mb-2">{{product.propertyName}}</h4>
+        <p class="card-text text-center text-muted">{{product.propertyLocation}}</p>
+        <p class="text-center pt-2 small text-dark">{{product.propertyPrice}}</p>
       </div>
     </div>
   </div>
