--- a/property-rental-main-app/src/app/components/image-carousel/image-carousel.component.html
+++ b/property-rental-main-app/src/app/components/image-carousel/image-carousel.component.html
@@ -1,19 +1,15 @@
-<div *ngIf="imageCarousel.propertyImages.length" id="carousel" class="carousel slide h-full" data-bs-ride="carousel">
-  <div class="carousel-inner h-full">
-    <div *ngFor="let image of imageCarousel.propertyImages" class="carousel-item active h-full">
-      <img [src]="image" class="block w-full h-full object-cover" alt="..." />
+<div *ngIf="imageCarousel.propertyImages.length" id="carousel" class="carousel slide h-100" data-bs-ride="carousel">
+  <div class="carousel-inner h-100">
+    <div *ngFor="let image of imageCarousel.propertyImages; let i = index" class="carousel-item h-100" [ngClass]="{ 'active': i === 0 }">
+      <img [src]="image" class="d-block w-100 h-100" alt="..." />
     </div>
   </div>
-  <a href="#carousel"
-    class="carousel-control-prev absolute top-0 bottom-0 left-0 flex items-center justify-center p-0 text-center text-gray-700 hover:text-gray-900"
-    role="button" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon inline-block bg-no-repeat" aria-hidden="true"></span>
-    <span class="sr-only">Previous</span>
+  <a href="#carousel" class="carousel-control-prev" role="button" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
   </a>
-  <a href="#carousel"
-    class="carousel-control-next absolute top-0 bottom-0 right-0 flex items-center justify-center p-0 text-center text-gray-700 hover:text-gray-900"
-    role="button" data-bs-slide="next">
-    <span class="carousel-control-next-icon inline-block bg-no-repeat" aria-hidden="true"></span>
-    <span class="sr-only">Next</span>
+  <a href="#carousel" class="carousel-control-next" role="button" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
   </a>
 </div>
