--- a/property-rental-main-app/src/app/components/send-message/send-message.component.html
+++ b/property-rental-main-app/src/app/components/send-message/send-message.component.html
@@ -1,83 +1,118 @@
 <div class="modal fade" id="sendMessage" tabindex="-1" aria-labelledby="fileModalLabel" aria-hidden="true">
-    <div class="modal-dialog modal-lg modal-dialog-centered">
-      <div class="modal-content">
-        <div class="modal-header bg-gray-100">
-          <h5 class="modal-title font-semibold text-gray-700" id="fileModalLabel">Appartmenrt name</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-        </div>
-        <div class="modal-body">
-          <div class="bg-[#f2f2f2] p-6 rounded-lg shadow-lg">
-            <div>
-              <form action="" [formGroup]="requestTourForm" (ngSubmit)="onSubmit()">
-                <div class="flex gap-4 mb-4 text-black">
-                  <input type="text" placeholder="First name" class="pl-3 py-2 border border-gray-300 rounded-md w-1/2 shadow-sm focus:outline-none focus:border-green-700 transition duration-200" formControlName="firstName"/>
-                  <span class="text-red-500" *ngIf="requestTourForm.controls['firstName'].touched && requestTourForm.controls['firstName'].hasError('required')">
-                    First name is required
-                </span>
-                  <span class="text-red-500" *ngIf="requestTourForm.controls['firstName'].touched && requestTourForm.controls['firstName'].hasError('maxlength')">
-                    First name must be less than 20 characters
-                </span>
-                  <input type="text" placeholder="Last name" class="pl-3 py-2 border border-gray-300 rounded-md w-1/2 shadow-sm focus:outline-none focus:border-green-700 transition duration-200" formControlName="lastName"/>
-                  <span class="text-red-500" *ngIf="requestTourForm.controls['lastName'].touched && requestTourForm.controls['lastName'].hasError('required')">
-                    Last name is required
-                </span>
-                  <span class="text-red-500" *ngIf="requestTourForm.controls['lastName'].touched && requestTourForm.controls['lastName'].hasError('maxlength')">
-                    Last name must be less than 20 characters
-                </span>
-                </div>
-                <div class="mb-4 text-black" >
-                  <input type="email" placeholder="Email Address" class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" formControlName="email" />
-                  <span class="text-red-500" *ngIf="requestTourForm.controls['email'].touched && requestTourForm.controls['email'].hasError('required')">
-                    Email is required
-                </span>
-                  <span class="text-red-500" *ngIf="requestTourForm.controls['email'].touched && requestTourForm.controls['email'].hasError('email')">
-                    Please enter a valid email address
-                </span>
-                </div>
-                <div class="flex gap-4 mb-4">
-                  <div class="w-1/2 text-black">
-                    <p class="text-sm mb-1">Preferred date</p>
-                    <input type="date" class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200" formControlName="tourDate" />
-                    <span class="text-red-500" *ngIf="requestTourForm.controls['tourDate'].touched && requestTourForm.controls['tourDate'].hasError('required')">
-                      Date is required
-                  </span>
-                  </div>
-                  <div class="w-1/2 text-black ">
-                    <p class="text-sm mb-1">Contact no</p>
-                    <input type="tel" id="phone" name="phone" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required class="pl-3 py-2 border border-gray-300 rounded-md w-full shadow-sm focus:outline-none focus:border-green-700 transition duration-200"  formControlName="phoneNumber"/>
-                    <span class="text-red-500" *ngIf="requestTourForm.controls['phoneNumber'].touched && requestTourForm.controls['phoneNumber'].hasError('required')">
-                      Phone number is required
-                  </span>
-                    <span class="text-red-500" *ngIf="requestTourForm.controls['phoneNumber'].touched && requestTourForm.controls['phoneNumber'].hasError('pattern')">
-                      Please enter a valid phone number
-                  </span>
-                  </div>
-                </div>
-                  <div class="w-1/2 text-black ">
-                    <p class="text-sm mb-1">Custom Message</p>
-                  <textarea name="" id="" class="w-full"></textarea>
-                  </div>
-                <div class="text-center bg-slate-600 text-white py-2 rounded-md shadow-sm hover:bg-slate-700 transition duration-200">
-                  <button type="submit" [disabled]="requestTourForm.invalid" (click)="onSubmit();reset()">Send Message</button>
-                </div>
-                <div class="text-xs mt-4 text-black">
-                  <label class="flex items-center space-x-2">
-                    <input type="checkbox" value="Email me listings and apartments related info" class="form-checkbox text-green-600" formControlName="acceptTerms" />
-                    <span>Email me listings and apartments related info</span>
-                    <span class="text-red-500" *ngIf="requestTourForm.controls['acceptTerms'].touched && requestTourForm.controls['acceptTerms'].hasError('required')">
-                      You must accept the terms and conditions
-                  </span>
-                  </label>
-                </div>
-              </form>
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header bg-light">
+        <h5 class="modal-title fw-semibold text-dark" id="fileModalLabel">Apartment Name</h5>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        <div class="bg-light p-4 rounded shadow">
+          <form action="" [formGroup]="requestTourForm" (ngSubmit)="onSubmit()">
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <input 
+                  type="text" 
+                  placeholder="First name" 
+                  class="form-control" 
+                  formControlName="firstName" 
+                />
+                <small class="text-danger" *ngIf="requestTourForm.controls['firstName'].touched && requestTourForm.controls['firstName'].hasError('required')">
+                  First name is required
+                </small>
+                <small class="text-danger" *ngIf="requestTourForm.controls['firstName'].touched && requestTourForm.controls['firstName'].hasError('maxlength')">
+                  First name must be less than 20 characters
+                </small>
+              </div>
+              <div class="col-md-6">
+                <input 
+                  type="text" 
+                  placeholder="Last name" 
+                  class="form-control" 
+                  formControlName="lastName" 
+                />
+                <small class="text-danger" *ngIf="requestTourForm.controls['lastName'].touched && requestTourForm.controls['lastName'].hasError('required')">
+                  Last name is required
+                </small>
+                <small class="text-danger" *ngIf="requestTourForm.controls['lastName'].touched && requestTourForm.controls['lastName'].hasError('maxlength')">
+                  Last name must be less than 20 characters
+                </small>
+              </div>
             </div>
-          </div>
-        </div>
-        <div class="modal-footer bg-gray-100">
-          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <div class="mb-3">
+              <input 
+                type="email" 
+                placeholder="Email Address" 
+                class="form-control" 
+                formControlName="email" 
+              />
+              <small class="text-danger" *ngIf="requestTourForm.controls['email'].touched && requestTourForm.controls['email'].hasError('required')">
+                Email is required
+              </small>
+              <small class="text-danger" *ngIf="requestTourForm.controls['email'].touched && requestTourForm.controls['email'].hasError('email')">
+                Please enter a valid email address
+              </small>
+            </div>
+            <div class="row mb-3">
+              <div class="col-md-6">
+                <label class="form-label">Preferred date</label>
+                <input 
+                  type="date" 
+                  class="form-control" 
+                  formControlName="tourDate" 
+                />
+                <small class="text-danger" *ngIf="requestTourForm.controls['tourDate'].touched && requestTourForm.controls['tourDate'].hasError('required')">
+                  Date is required
+                </small>
+              </div>
+              <div class="col-md-6">
+                <label class="form-label">Contact no</label>
+                <input 
+                  type="tel" 
+                  id="phone" 
+                  name="phone" 
+                  pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" 
+                  class="form-control" 
+                  required 
+                  formControlName="phoneNumber" 
+                />
+                <small class="text-danger" *ngIf="requestTourForm.controls['phoneNumber'].touched && requestTourForm.controls['phoneNumber'].hasError('required')">
+                  Phone number is required
+                </small>
+                <small class="text-danger" *ngIf="requestTourForm.controls['phoneNumber'].touched && requestTourForm.controls['phoneNumber'].hasError('pattern')">
+                  Please enter a valid phone number
+                </small>
+              </div>
+            </div>
+            <div class="mb-3">
+              <label class="form-label">Custom Message</label>
+              <textarea class="form-control" formControlName="message"></textarea>
+            </div>
+            <div class="d-grid">
+              <button 
+                type="submit" 
+                class="btn btn-primary" 
+                [disabled]="requestTourForm.invalid" 
+                (click)="onSubmit();reset()">
+                Send Message
+              </button>
+            </div>
+            <div class="form-check mt-3">
+              <input 
+                type="checkbox" 
+                class="form-check-input" 
+                id="acceptTerms" 
+                formControlName="acceptTerms" 
+              />
+              <label class="form-check-label" for="acceptTerms">
+                Email me listings and apartments related info
+              </label>
+              <small class="text-danger" *ngIf="requestTourForm.controls['acceptTerms'].touched && requestTourForm.controls['acceptTerms'].hasError('required')">
+                You must accept the terms and conditions
+              </small>
+            </div>
+          </form>
         </div>
       </div>
     </div>
   </div>
-
-
+</div>
