--- a/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
+++ b/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
@@ -1,17 +1,16 @@
-<div class="text-white px-5">
-    <div class="heading">
-        <h1 class="font-semibold text-4xl">
+<div class="text-light  p-4">
+    <div class="text-center mb-4">
+        <h1 class="fw-bold display-5">
             The Residences at NewCity
         </h1>
     </div>
     <div class="tabs">
-        <div class="card bg-black">
-            <div class="card-body">
-                <p class="card-text">   
+        <div class="card bg-black border-0 shadow">
+            <div class="card-body ">
+                <p class="card-text mb-0">   
                     <app-tabs [data]="tableDataList"></app-tabs>
                 </p>
             </div>
         </div>
-        
     </div>
-</div> 
+</div>
