--- a/property-rental-main-app/src/app/components/property-data-facilities/property-data-facilities.component.html
+++ b/property-rental-main-app/src/app/components/property-data-facilities/property-data-facilities.component.html
@@ -1,9 +1,9 @@
-<h1 class="text-2xl pt-5 font-semibold text-white">{{ facilities.heading }}</h1>
+<h1 class="h4 pt-3 fw-semibold text-white">{{ facilities.heading }}</h1>
 
-<div class="features-container text-white flex space-x-5">
+<div class="features-container text-white d-flex gap-3">
   <!-- First Column -->
   <div class="features-wrapper pt-3">
-    <ul class="features-list">
+    <ul class="features-list list-unstyled">
       <li *ngFor="let property of facilities.features.slice(0, 6)">
         {{ property.list }}
       </li>
@@ -12,7 +12,7 @@
 
   <!-- Second Column -->
   <div class="features-wrapper pt-3">
-    <ul class="features-list">
+    <ul class="features-list list-unstyled">
       <li *ngFor="let property of facilities.features.slice(6, 12)">
         {{ property.list }}
       </li>
@@ -21,7 +21,7 @@
 
   <!-- Third Column -->
   <div class="features-wrapper pt-3">
-    <ul class="features-list">
+    <ul class="features-list list-unstyled">
       <li *ngFor="let property of facilities.features.slice(12, 18)">
         {{ property.list }}
       </li>
