--- a/property-rental-main-app/src/app/components/property-school-card/property-school-card.component.html
+++ b/property-rental-main-app/src/app/components/property-school-card/property-school-card.component.html
@@ -1,4 +1,4 @@
-<h1 class="h2 pt-3 fw-semibold text-white text-center">{{ school.heading }}</h1>
+<h1 class="h2 pt-3 fw-semibold text-white ">{{ school.heading }}</h1>
 <div class="container mx-auto p-4">
     <div class="row g-4">
         <!-- Card Template -->
