--- a/property-rental-main-app/src/app/components/tabs/tabs.component.html
+++ b/property-rental-main-app/src/app/components/tabs/tabs.component.html
@@ -1,31 +1,36 @@
-<div class="card mt-5 bg-gray-900 text-white">
-    <!-- Nav tabs -->
-    <ul class="nav nav-tabs flex space-x-2" id="myTab" role="tablist">
+<div class="card mt-5 bg-dark text-light shadow-lg rounded">
+  <!-- Nav tabs -->
+  <ul class="nav nav-tabs border-0" id="myTab" role="tablist">
       <li *ngFor="let tabData of tabDataList" class="nav-item" role="presentation">
-        <button
-          class="nav-link px-4 py-2 rounded-t-md bg-gray-800 hover:bg-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 {{tabData.defaultActive}}"
-          id="{{tabData.id}}+'-tab'"
-          data-bs-toggle="tab"
-          [attr.data-bs-target]="'#'+tabData.id"
-          type="button"
-          role="tab"
-          [attr.aria-controls]="tabData.id"
-          [attr.aria-selected]="tabData.selected">
-          {{tabData.displayName}}
-        </button>
+          <button
+              class="nav-link text-black fw-semibold px-4 py-2 rounded-top {{tabData.defaultActive}}"
+              id="{{tabData.id}}-tab"
+              data-bs-toggle="tab"
+              [attr.data-bs-target]="'#'+tabData.id"
+              type="button"
+              role="tab"
+              [attr.aria-controls]="tabData.id"
+              [attr.aria-selected]="tabData.selected"
+              style="transition: background-color 0.3s, transform 0.2s;"
+              (mouseover)="onTabHover($event)"
+              (mouseout)="onTabLeave($event)">
+              {{tabData.displayName}}
+          </button>
       </li>
-    </ul>
-  
-    <!-- Tab panes -->
-    <div class="tab-content p-4 bg-gray-800 rounded-b-md" id="myTabContent">
-      <div *ngFor="let tabData of tabDataList" class="tab-pane fade show {{tabData.defaultActive}}"
-        id="{{tabData.id}}"
-        role="tabpanel"
-        [attr.aria-labelledby]="tabData.id+'-tab'">
-        <ng-container *ngFor="let component of tabData.components">
-          <ng-container *ngComponentOutlet="component"></ng-container>
-        </ng-container>
+  </ul>
+
+  <!-- Tab panes -->
+  <div class="tab-content p-4 bg-secondary rounded-bottom" id="myTabContent">
+      <div 
+          *ngFor="let tabData of tabDataList" 
+          class="tab-pane fade show {{tabData.defaultActive}}"
+          id="{{tabData.id}}"
+          role="tabpanel"
+          [attr.aria-labelledby]="tabData.id+'-tab'"
+          style="animation: fadeIn 0.5s;">
+          <ng-container *ngFor="let component of tabData.components">
+              <ng-container *ngComponentOutlet="component"></ng-container>
+          </ng-container>
       </div>
-    </div>
   </div>
-  
+</div>
