fix(dev):working on floor plan component

--- a/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
+++ b/property-rental-main-app/src/app/page/property-media-viewer/property-media-viewer.component.html
@@ -5,7 +5,7 @@
         </h1>
     </div>
     <div class="tabs">
-        <div class="card bg-black border-0 shadow">
+        <div class="card  border-0 shadow">
             <div class="card-body ">
                 <p class="card-text mb-0">   
                     <app-tabs [data]="tableDataList"></app-tabs>
